--- a/build.gradle
+++ b/build.gradle
@@ -27,16 +27,22 @@ repositories {
 dependencies {
   runtime('com.h2database:h2')
 
+  // Spring
   compile('org.springframework.boot:spring-boot-starter-actuator')
   compile('org.springframework.boot:spring-boot-starter-data-jpa')
   compile('org.springframework.boot:spring-boot-starter-web')
+  runtime('org.springframework.boot:spring-boot-devtools')
+  // Swagger
   compile('io.springfox:springfox-swagger2:2.7.0')
   compile('io.springfox:springfox-swagger-ui:2.7.0')
-
-  testCompile('org.springframework.boot:spring-boot-starter-test')
-
+  // Lombok
   annotationProcessor("org.projectlombok:lombok:$lombokVersion")
   compileOnly("org.projectlombok:lombok:$lombokVersion")
+
+  // Test
+  testCompile('org.springframework.boot:spring-boot-starter-test')
+  testCompile('org.assertj:assertj-core:3.10.0')
+  // Lombok in test
   testAnnotationProcessor("org.projectlombok:lombok:$lombokVersion")
   testCompileOnly("org.projectlombok:lombok:$lombokVersion")
 }
