--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 spring.datasource.url=jdbc:h2:./the-eod-machine;DB_CLOSE_ON_EXIT=FALSE
+spring.jpa.hibernate.ddl-auto=update
